# dft-plot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
dftplot/: __init__.py
dftplot/band/: __init__.py
dftplot/charge/: __init__.py
dftplot/dos/: __init__.py  plotter.py  qe_plotter.py
dftplot/utils/: __init__.py  io.py
docs/superpowers/plans/: 2026-05-16-qe-pdos-plotter.md
docs/superpowers/specs/: 2026-05-16-qe-pdos-plotter-design.md
notebooks/: band.ipynb  dos.ipynb
